--- a/_data/megamenu.yml
+++ b/_data/megamenu.yml
@@ -43,7 +43,7 @@
     #  link: /partners/become-a-partner/
 
 - header: Curricula
-  link: /curricula/
+  link: https://curriculum.dhinstitutes.org/
 
 - header: Reports
   link: /reports/
