--- a/_data/people.yml
+++ b/_data/people.yml
@@ -109,6 +109,28 @@ fellows:
     img: di-yoong.jpg
     alumni: false
 
+  - first_name: Connor
+    last_name: French
+    short: connorfrench
+    title: Digital Fellow and Ph.D. Candidate, Biology, The Graduate Center (CUNY)
+    website: connor-french.com
+    github: connor-french
+    twitter: frog_phylo
+    bio: "Connor French is a Ph.D. candidate in the Biology department. He studies the impact of historical climate change on the spatial distribution of animals, with a focus on reptiles and amphibians in the Brazilian Atlantic Forest. As a GC Digital Fellow, Connor specialized in proselytizing the R programming language, especially in contexts outside of his narrow academic field."
+    img: connor-french.jpeg
+    alumni: false
+
+  - first_name: Param
+    last_name: Ajmera
+    short: paramajmera
+    title: Digital Fellow and Ph.D. Candidate, English, The Graduate Center (CUNY)
+    website: paramajmera.org
+    github: paramajmera
+    twitter: ParamAjmera
+    bio: "Param Ajmera is an English PhD candidate and Digital Fellow at the CUNY Graduate Center. He received his BA in English Literature and Economics from Denison University, and his MA in English as well as a Graduate Certificate in Digital Humanities from Northeastern University. His research interests include Race and Ethnicity Studies, American Studies, and Digital Humanities. Param’s dissertation project is an archival study of the early history of Indian international students in the United States. His research theorizes the experiences of these students to discuss ways of building transnational solidarities against colonialism, racism, and patriarchy. Alongside his dissertation, Param is also developing a website titled Indian Students Abroad that exhibits his archival findings. Param has previously worked on the Women Writers Project, the CERES Exhibit Toolkit, and the Graduate Center Digital Research Institute. He currently serves on the Editorial Collective of The Journal of Interactive Technology and Pedagogy."
+    img: param-ajmera.jpg
+    alumni: false
+
   - first-name: Jojo
     last-name: Karlin
     short: jojokarlin
