--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# url: https://www.dhinstitutes.org
+url: https://www.dhinstitutes.org
 # this should also be secured in the .htaccess file
 
 sass:
